src/tests/routes/crates/snapshots/integration__routes__crates__update__disable_trustpub_only-10.snap
---
source: src/tests/routes/crates/update.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Publishing method restriction changed for foo
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

You changed the publishing method restriction for your crate "foo".

This crate can now be published via both Trusted Publishing and API tokens.

This means that both trusted publishers (like GitHub Actions or GitLab CI workflows) and users with API tokens will be able to publish new versions of this crate.

If you did not make this change and you think it was made maliciously, you can revert the setting from the "Settings" tab on the crate's page.

If you are unable to revert the change and need to do so, you can email help@crates.io for assistance.

--
The crates.io Team
