src/tests/routes/crates/snapshots/integration__routes__crates__update__disable_trustpub_only-3.snap
---
source: src/tests/routes/crates/update.rs
expression: json
---
{
  "crate": {
    "badges": [],
    "categories": null,
    "created_at": "[datetime]",
    "default_version": "0.99.0",
    "description": null,
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "foo",
    "keywords": null,
    "links": {
      "owner_team": "/api/v1/crates/foo/owner_team",
      "owner_user": "/api/v1/crates/foo/owner_user",
      "owners": "/api/v1/crates/foo/owners",
      "reverse_dependencies": "/api/v1/crates/foo/reverse_dependencies",
      "version_downloads": "/api/v1/crates/foo/downloads",
      "versions": "/api/v1/crates/foo/versions"
    },
    "max_stable_version": null,
    "max_version": "0.0.0",
    "name": "foo",
    "newest_version": "0.0.0",
    "num_versions": 1,
    "recent_downloads": null,
    "repository": null,
    "trustpub_only": true,
    "updated_at": "[datetime]",
    "versions": null,
    "yanked": false
  }
}
